Minor pre-release preps